[gd_scene load_steps=3 format=3 uid="uid://b401xtha2whym"]

[ext_resource type="Script" path="res://CameraTest.gd" id="1_ael7a"]

[sub_resource type="CameraTexture" id="CameraTexture_nl3vh"]
camera_feed_id = 1

[node name="CameraTest" type="HSplitContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ael7a")

[node name="Rows" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="ActivateFeed" type="CheckButton" parent="Rows"]
layout_mode = 2
text = "Activate feed"

[node name="Columns" type="HBoxContainer" parent="Rows"]
layout_mode = 2

[node name="YUYV" type="Label" parent="Rows/Columns"]
layout_mode = 2
text = "YUYV:"

[node name="RGB" type="CheckButton" parent="Rows/Columns"]
layout_mode = 2
text = "RGB"

[node name="Separate" type="CheckButton" parent="Rows/Columns"]
layout_mode = 2
text = "Separate"

[node name="Grayscale" type="CheckButton" parent="Rows/Columns"]
layout_mode = 2
text = "Grayscale"

[node name="Copy" type="CheckButton" parent="Rows/Columns"]
layout_mode = 2
text = "Copy"

[node name="FrameProgressLabel" type="Label" parent="Rows"]
layout_mode = 2
text = "Frame progress:"

[node name="FrameProgress" type="ProgressBar" parent="Rows"]
layout_mode = 2
step = 1.0
allow_greater = true

[node name="CamerasLabel" type="Label" parent="Rows"]
layout_mode = 2
text = "Available cameras:"

[node name="Cameras" type="ItemList" parent="Rows"]
layout_mode = 2
auto_height = true

[node name="FormatsLabel" type="Label" parent="Rows"]
layout_mode = 2
text = "Available formats:"

[node name="ScrollContainer" type="ScrollContainer" parent="Rows"]
layout_mode = 2
size_flags_vertical = 3

[node name="Formats" type="ItemList" parent="Rows/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
auto_height = true

[node name="CameraRect" type="TextureRect" parent="."]
layout_mode = 2
texture = SubResource("CameraTexture_nl3vh")
stretch_mode = 3
